# RVISmith

./: .gitignore  CMakeLists.txt  License.txt  README.md  main.cpp
artifact/: README.md
code-example/0-explicit/: args.csv  gen_config.json
code-example/1-explicit-policy/: args.csv  gen_config.json
code-example/2-implicit/: args.csv  gen_config.json
code-example/3-implicit-policy/: args.csv  gen_config.json
code-example/4-all/: args.csv  gen_config.json
code-example/4-all/code/0/: allin.c  (+2 more)
reported-bugs/: README.md
reported-bugs/gcc/: 0.i  0.md  1.c  1.i  1.md  2-2.c  2.c  2.i  2.md  3-2.c  3.c  3.i  3.md  3.s  4-2.c  4.c  4.i  4.md  4.s  5.i  5.md  5.s  6.c  6.i  6.md  6.s
reported-bugs/llvm/: 0.c  0.md
reported-bugs/xuantie-gcc/: 0.c  0.md  1.c  1.md  2.c  2.md  3.c  3.md  3.s
reported-bugs/xuantie-llvm/: 0-1.c  0-2.c  0.c  0.md
rvv-doc/: README.md
rvv-doc/rvv-intrinsic-doc-1.0-rc2/explicit_intrinsic_funcs/: 00_vector_loads_and_stores_intrinsics.adoc  01_vector_loads_and_stores_segment_intrinsics.adoc  02_vector_integer_arithmetic_intrinsics.adoc  03_vector_fixed-point_arithmetic_intrinsics.adoc  04_vector_floating-point_intrinsics.adoc  05_vector_reduction_operations.adoc  07_vector_permutation_intrinsics.adoc  (+1 more)
scripts/: Config.py  ConfigGen.py  DiffEval.py  IntrinDefParser.py  JudgeResults.py  OpDefParser.py  Performance.py  PreprocessDoc.py  README.md  RIFCoverage.py  RVISmithCoverage.py  RVISmithDriver.py  Summary.py  TestGen.py  TestMultiVersion.py  config_example.txt
src/: CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  Memory.cpp  Memory.hpp  Operator.cpp  Operator.hpp  Operator_J.cpp  Register.cpp  Register.hpp  Type.cpp  Type.hpp  Utils.cpp  Utils.hpp
tests/: CMakeLists.txt  testNfields.cpp  testRegister.cpp
(+100 files in other folders)
